@@ -1,3 +1,9 @@
+2011-01-21 Shlomi Fish <shlomif@iglu.org.il>
+	* IO-Socket is doing some imports so we now do use IO::Socket ().
+		- Fixed the rest of the imports.
+	* Thanks to LeoNerd
+	* New Release IO-Socket-INET6-2.7
+
 2011-01-13 Shlomi Fish <shlomif@iglu.org.il>
 	* Made the use Socket call import constants selectively, and not rely
 	on @EXPORT's whims:
